Remove excess HTML and restructure tag HTML to prevent text wrapping

--- a/client/app/clusters/clusters.scss
+++ b/client/app/clusters/clusters.scss
@@ -160,6 +160,7 @@
   padding: 6px 0px 3px 5px;
   cursor: default;
   border: 1px solid #C7C7C7;
+  display: inline-block;
 }
 .ibm-nlc-tag a:hover {
   color: orange;
